# casa_cactus_speaker

./: README.md  kicad_makespace_tutorial.kicad_pcb  kicad_makespace_tutorial.kicad_prl  kicad_makespace_tutorial.kicad_pro  kicad_makespace_tutorial.kicad_sch
.devcontainer/: devcontainer.json
.github/workflows/: uncrustify.yaml
boilerplate/esp32/: esp32_boilerplate.kicad_pcb  esp32_boilerplate.kicad_prl  esp32_boilerplate.kicad_pro  esp32_boilerplate.kicad_sch  project_lib.kicad_sym
boilerplate/esp32/fab_v1/: esp32_boilerplate-top-pos.csv  esp32_boilerplate.csv
boilerplate/esp32/project_lib.3dshapes/: LED-SMD_4P-L5.0-W5.0-BL_TC5050RGB.step  LED-SMD_4P-L5.0-W5.0-BL_TC5050RGB.wrl
boilerplate/esp32/project_lib.pretty/: LED-SMD_4P-L5.0-W5.0-BL_TC5050RGB.kicad_mod
cspot-ng/: CMakeLists.txt  main.cpp
cspot-ng/include/: ByteArray.hpp  Constants.hpp  Context.hpp  LoginBlob.hpp  ProtoBuf.hpp  Shannon.h  ShannonTCPClient.hpp  ZeroConf.hpp
cspot-ng/include/interfaces/: Crypto.hpp  HTTPClient.hpp  HTTPServer.hpp  MDNSProvider.hpp  TCPClient.hpp  mDNSProvider.hpp
cspot-ng/include/linux/: LinuxCrypto.hpp  LinuxCrytoMbedTLS.hpp  LinuxHTTPClient.hpp  LinuxHTTPServer.hpp  LinuxMDNSProvider.hpp  LinuxTCPClient.hpp
cspot-ng/protobuf/: authentication.pb.c  authentication.pb.h  login5.pb.c  login5.pb.h  metadata.pb.h  spirc.pb.h
cspot-ng/src/linux/: LinuxCrypto.cpp  LinuxCrytoMbedTLS.cpp  LinuxHTTPClient.cpp  LinuxHTTPServer.cpp  LinuxMDNSProvider.cpp  LinuxTCPClient.cpp
cspot-ng/utils/: fake_tcp_server.py  send_fake_post.py
cspot/cspot/bell/: CMakeLists.txt
cspot/cspot/include/: Logger.h
cspot/targets/cli/: CliPlayer.cpp  main.cpp
fab_v1/gerber/: drill_report.rpt  kicad_makespace_tutorial-CmtUser.gbr  kicad_makespace_tutorial-CuBottom.gbl  kicad_makespace_tutorial-CuTop.gtl  kicad_makespace_tutorial-EdgeCuts.gm1  kicad_makespace_tutorial-MaskBottom.gbs  kicad_makespace_tutorial-MaskTop.gts  kicad_makespace_tutorial-PasteBottom.gbp  kicad_makespace_tutorial-PasteTop.gtp  kicad_makespace_tutorial-SilkBottom.gbo  kicad_makespace_tutorial-SilkTop.gto  kicad_makespace_tutorial.drl  kicad_makespace_tutorial.gbrjob
fab_v2/gerber/: kicad_makespace_tutorial-CmtUser.gbr  kicad_makespace_tutorial-CuBottom.gbl  kicad_makespace_tutorial-CuTop.gtl  kicad_makespace_tutorial-EdgeCuts.gm1  kicad_makespace_tutorial-MaskTop.gts  kicad_makespace_tutorial-NPTH-drl_map.gbr  kicad_makespace_tutorial-NPTH.drl  kicad_makespace_tutorial-PTH.drl  kicad_makespace_tutorial-PasteBottom.gbp  kicad_makespace_tutorial-SilkBottom.gbo  kicad_makespace_tutorial-SilkTop.gto  kicad_makespace_tutorial.gbrjob
fab_v3/gerber/: kicad_makespace_tutorial-CmtUser.gbr  kicad_makespace_tutorial-CuBottom.gbl  kicad_makespace_tutorial-CuTop.gtl  kicad_makespace_tutorial-NPTH-drl_map.gbr  kicad_makespace_tutorial-NPTH.drl  kicad_makespace_tutorial-PTH-drl_map.gbr  kicad_makespace_tutorial-PasteBottom.gbp  kicad_makespace_tutorial-SilkBottom.gbo  kicad_makespace_tutorial-SilkTop.gto  kicad_makespace_tutorial.gbrjob
firmware/: .gitignore  CMakeLists.txt  sdkconfig
firmware/main/: ButtonController.hpp  CMakeLists.txt  Event.hpp  HTTPStream.hpp  I2SSink.hpp  MP3Decoder.hpp  RingBuffer.hpp  RotaryController.hpp  SongPlayer.hpp  SongsProvider.hpp  WAVParser.hpp  WifiManager.hpp  cactus_speaker.cpp  idf_component.yml
firmware/main/bt/: bt_app_av.c
firmware/main/songlists/: songs_classic.hpp  songs_coffee_jazz.hpp  songs_lofigirl.hpp  songs_rain.hpp
firmware/main/webpages/: wifiprovisioning.html
hardware/: kicad_makespace_tutorial.kicad_pcb  kicad_makespace_tutorial.kicad_pro  kicad_makespace_tutorial.kicad_sch
hardware/fab_v1/gerber/: drill_report.rpt  kicad_makespace_tutorial-CmtUser.gbr  kicad_makespace_tutorial-CuBottom.gbl  kicad_makespace_tutorial-CuTop.gtl  kicad_makespace_tutorial-EdgeCuts.gm1  kicad_makespace_tutorial-MaskBottom.gbs  kicad_makespace_tutorial-MaskTop.gts  kicad_makespace_tutorial-PasteBottom.gbp  kicad_makespace_tutorial-PasteTop.gtp  kicad_makespace_tutorial-SilkBottom.gbo  kicad_makespace_tutorial-SilkTop.gto  kicad_makespace_tutorial.drl  kicad_makespace_tutorial.gbrjob
(+26 files in other folders)
